--- a/sample/zuul-server/src/main/resources/resources/login.html
+++ b/sample/zuul-server/src/main/resources/resources/login.html
@@ -20,7 +20,7 @@
             <td>验证码：</td>
             <td>
                 <input type="text" name="imageCode">
-                <img src="/code/image">
+                <img src="/verifyCode/image">
             </td>
         </tr>
         <tr>
@@ -34,5 +34,32 @@
         </tr>
     </table>
 </form>
+
+<h2>短信登录</h2>
+<form action="/auth/mobile" method="post">
+    <table>
+        <tr>
+            <td>用户名：</td>
+            <td><input type="text" name="mobile" value="user"></td>
+        </tr>
+        <tr>
+            <td>验证码：</td>
+            <td>
+                <input type="text" name="smsCode" value="">
+                <a href="/verifyCode/sms?mobile=17718376207">发送验证码</a>
+            </td>
+        </tr>
+        <tr>
+            <td>记住我：</td>
+            <td><input type="checkbox" name="remember-me" value="true"></td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <button type="submit">登录</button>
+            </td>
+        </tr>
+    </table>
+</form>
+
 </body>
 </html>
