--- a/sample/zuul-server/src/main/resources/resources/login.html
+++ b/sample/zuul-server/src/main/resources/resources/login.html
@@ -59,7 +59,7 @@
 </form>
 
 <h2>短信登录</h2>
-<a href="/auth/qq">QQ登录</a>
+<a href="/auth/callback">QQ登录</a>
 &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="/auth/weixin">微信登录</a>
 
