--- a/sample/zuul-server/src/main/resources/resources/login.html
+++ b/sample/zuul-server/src/main/resources/resources/login.html
@@ -51,6 +51,10 @@
             </td>
         </tr>
         <tr>
+            <td>记住我：</td>
+            <td><input type="checkbox" name="remember-me" value="true"></td>
+        </tr>
+        <tr>
             <td colspan="2">
                 <button type="submit">登录</button>
             </td>
@@ -59,7 +63,7 @@
 </form>
 
 <h2>短信登录</h2>
-<a href="/auth/callback">QQ登录</a>
+<a href="/auth/qq">QQ登录</a>
 &nbsp;&nbsp;&nbsp;&nbsp;
 <a href="/auth/weixin">微信登录</a>
 
