--- a/sample/zuul-server/src/main/resources/resources/signUp.html
+++ b/sample/zuul-server/src/main/resources/resources/signUp.html
@@ -10,7 +10,7 @@
     <table>
         <tr>
             <td>用户名:</td>
-            <td><input type="text" name="username"></td>
+            <td><input type="text" name="userId"></td>
         </tr>
         <tr>
             <td>密码:</td>
